--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,37 @@ img {
     border: 1px solid #ddd;
     padding: 5px;
     height: 150px;
-  }
+}
 
-  p {
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-size: medium;
-      font-weight: lighter;
-  }
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: medium;
+    font-weight: lighter;
+}
 
-  h1 {
-      color: blue;
-  }
+h1 {
+    color: blue;
+}
 
-  h3 {
-      color: blueviolet;
-  }
+h3 {
+    color: blueviolet;
+}
+
+#list {
+    list-style-type: square;
+}
+
+#background {
+    position: fixed;
+    z-index: -99;
+    top: 0px;
+    opacity: 30%; 
+    width: 100%;
+    height: 100%;
+}
+
+#video {
+    border: 0px;
+    width: 100%;
+    height: 100%;
+}
