--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,31 @@ img {
     height: 150px;
 }
 
+.blur {
+    filter: blur(5px);
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+}
+
+.bottom {
+    position: absolute;
+    top: -150px;
+    left: 0px;
+    z-index: 3;
+}
+
+.bottom:hover {
+    opacity: 0;
+}
+
+span {
+    position: relative;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.356);
+}
+
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: medium;
@@ -23,11 +48,43 @@ h3 {
     list-style-type: square;
 }
 
+header>a:visited {
+    color: chartreuse;
+    font-weight: bold;
+}
+
+h3+h2 {
+    font-style: italic;
+    color: cyan;
+}
+
+a:link {
+    color: darkgreen;
+}
+
+a:active {
+    font-size: 30px;
+}
+
+
+
+.hidden {
+    position: absolute;
+    height: 150px;
+    vertical-align: middle;
+    top: -65px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+   z-index: 2;
+    
+}
+
 #background {
     position: fixed;
     z-index: -99;
     top: 0px;
-    opacity: 30%; 
+    opacity: 30%;
     width: 100%;
     height: 100%;
 }
@@ -37,3 +94,4 @@ h3 {
     width: 100%;
     height: 100%;
 }
+
