--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+img {
+    max-width: 100%;
+}
+
+article {
+    padding-top: 200px;
+}
+
 section img {
     border-radius: 8px;
     border: 1px solid #ddd;
@@ -15,19 +29,22 @@ section img {
 
 .bottom {
     position: absolute;
-    top: -150px;
+    top: 0px;
     left: 0px;
     z-index: 3;
 }
 
 .bottom:hover {
     opacity: 0;
+    transition: 1s;
 }
 
 span {
+    display: inline-block;
     position: relative;
     text-align: center;
-    color: rgba(255, 255, 255, 0.356);
+    vertical-align: middle;
+    color: rgba(27, 24, 185, 0.13);
 }
 
 p {
@@ -66,25 +83,29 @@ a:active {
     font-size: 30px;
 }
 
-
-
 .hidden {
     position: absolute;
-    height: 150px;
+    height: 130px;
+    text-align: center;
     vertical-align: middle;
-    top: -65px;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-   z-index: 2;
-    
+    z-index: 2;
+    color: rgb(0, 0, 0);
+    text-shadow: 1px 1px 1px rgb(190, 190, 190);
+}
+
+body {
+    background-color: burlywood;
 }
 
 #background {
     position: fixed;
     z-index: -99;
     top: 0px;
-    opacity: 30%;
+    opacity: 0%;
     width: 100%;
     height: 100%;
 }
@@ -95,3 +116,40 @@ a:active {
     height: 100%;
 }
 
+/* W4C */
+
+#logo {
+    height: 60px;
+    align-self: center;
+}
+
+#page-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: chocolate;
+    display: grid;
+    grid-template-columns: 10fr 1fr 1fr 1fr 1fr 1fr;
+    place-items: center;
+    height: 65px;
+    z-index: 4;
+}
+
+#logo-container {
+    display: grid;
+    justify-self: start;
+    align-self: center;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: darkgoldenrod;
+    display: grid;
+    grid-auto-flow: column;
+    place-items: center;
+    z-index: 4;
+}
