--- a/css/menu.css
+++ b/css/menu.css
@@ -10,6 +10,8 @@ img {
 }
 
 #menu-container {
+    margin-top: 10px;
+    position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     place-items: center;
@@ -36,14 +38,31 @@ img {
     height: 60px;
 }
 
-#small-header {
-    padding: 10px;
+#header {
+    padding: 3px;
     display: grid;
-    place-items: center;
+    grid-auto-flow: column;
+    background-color: rgb(225, 173, 1);
+    box-shadow: 0px 0px 5px black;
 }
 
-#big-header {
-    display: none;
+.nav>a {
+    padding: 5px 10px;
+    text-align: right;
+}
+
+.toggle {
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    opacity: 0;
+}
+
+#logo-container {
+    place-self: start;
+    height: 60px;
 }
 
 h3+p {
@@ -54,48 +73,183 @@ body {
     background-color: burlywood;
 }
 
+#spacer {
+    display: none;
+}
+
+.nav {
+    display: none;
+    position: relative;
+    transform: translateX(0px);
+    transition: all .6s ease-out;
+    opacity: 1;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.toggle:checked~.nav {
+    display: grid;
+}
+
+.toggle:active~.nav {
+    position: relative;
+    transform: translateX(-30px);
+    transition-delay: 2s;
+    opacity: 0;
+}
+
+#title {
+    margin-top: 10px;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+#nav {
+    display: grid;
+}
+
+#menu-icon {
+    padding: 10px;
+    height: 40px;
+    justify-self: end;
+}
+
+/* transitions start */
+
+.shell {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    border: 2px solid white;
+    border-radius: 13%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+
+.shell .mask {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background-color: rgba(219, 127, 8, 0.7);
+    transition: all 0.4s ease-in-out;
+}
+
+.shell img {
+    display: block;
+    position: relative;
+    width: 150px;
+    transition: all 0.2s linear;
+}
+
+.shell h2 {
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    position: relative;
+    font-size: 1em;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0;
+    transform: translateY(-100px);
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+}
+
+.shell p {
+    font-style: italic;
+    font-size: .7em;
+    position: relative;
+    color: white;
+    padding: 10px 20px 20px;
+    text-align: center;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: all 0.2s linear;
+}
+
+.shell .info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: black;
+    color: white;
+    text-transform: uppercase;
+    box-shadow: 0 0 1px black;
+    opacity: 0;
+    transition: all 0.2s ease-in-out
+}
+
+.shell .info:hover {
+    box-shadow: 0 0 5px black;
+}
+
+.shell:hover img {
+    transform: scale(1.1);
+}
+
+.shell:hover .mask {
+    opacity: 1;
+}
+
+.shell:hover h2, .shell:hover p, .shell:hover .info {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.shell:hover p {
+    transition-delay: 0.1s;
+}
+
+.shell:hover .info {
+    transition-delay: 0.2s;
+}
+
+/* Transition end */
+
+/* Start of media Query */
+
 @media only screen and (min-width: 600px) {
-    #small-header {
-        display: none;
-    }
-
-    #big-header>a {
-        justify-self: start;
-        height: 60px;
-    }
-
-    #big-header {
+    
+    #header {
         background-color: chocolate;
+    }
+
+    .nav {
+        margin: 0;
+        padding: 0;
         display: grid;
         grid-auto-flow: column;
-        align-items: center;
-        justify-items: end;
-        height: 60px;
+        place-items: center;
     }
 
-    #spacer {
+    .nav>a {
+        padding: 0;
+        margin: 0;
+    }
+
+    #nav {
+        margin: 0;
+        padding: 0;
+    }
+
+    #menu-icon, #toggle {
         display: none;
-    }
-
-    #big-header>nav {
-        display: inline-block;
-        padding: 10px
-    }
-    
-    #big-header>nav>a {
-        padding: 5px;
     }
 }
 
 @media only screen and (min-width: 1000px) {
-    #big-header {
+    #header {
         background-color: crimson;
         box-shadow: 2px 2px 5px grey;
         padding: 0px 10px;
         margin-top: 10px;
         height: 60px;
     }
-
     #spacer {
         display: block;
         position: absolute;
@@ -105,13 +259,13 @@ body {
         top: 0;
         left: 0;
     }
-
-    .logo {
+    #header .logo {
         position: relative;
         height: 75px;
         padding: 0;
         margin: 0;
         z-index: 3;
         top: -7px;
+        place-self: center;
     }
 }
