--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -139,176 +139,34 @@ img {
   }
 }
 
-article {
-  padding: 40px 10px 10px 10px;
-}
-
-section {
+#maps {
   position: relative;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-}
-
-section img {
-  border-radius: 8px;
-  border: 1px solid #ddd;
-  padding: 5px;
-  height: 150px;
-}
-
-.blur {
-  -webkit-filter: blur(5px);
-          filter: blur(5px);
-  position: relative;
-  top: 0px;
-  left: 0px;
-  z-index: 1;
-}
-
-.bottom {
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 3;
-}
-
-.bottom :hover {
-  opacity: 0;
-  -webkit-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-}
-
-span {
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  color: rgba(27, 24, 185, 0.13);
-}
-
-p {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: medium;
-  font-weight: lighter;
-}
-
-h1 {
-  color: blue;
-}
-
-h3 {
-  color: blueviolet;
-}
-
-#list {
-  padding: 20px;
-  list-style-type: square;
-}
-
-header > a:visited {
-  color: chartreuse;
-  font-weight: bold;
-}
-
-h3 + h2 {
-  padding: 20px;
-  font-style: italic;
-  color: cyan;
-}
-
-a:link {
-  color: darkgreen;
-}
-
-a:active {
-  font-size: 30px;
-}
-
-.hidden {
-  position: absolute;
-  height: 130px;
-  text-align: center;
-  vertical-align: middle;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  overflow: hidden;
-  z-index: 2;
-  color: black;
-  text-shadow: 1px 1px 1px #bebebe;
-}
-
-body {
-  background-color: burlywood;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  width: 100vw;
-}
-
-#background {
-  position: fixed;
-  z-index: -99;
-  top: 0px;
-  opacity: 0%;
-  width: 100%;
-  height: 100%;
-}
-
-.video {
-  border: 0px;
-  padding-bottom: 20px;
-}
-
-#commercial {
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-}
-
-#commercial p {
-  padding: 20px;
+  width: 90%;
+  margin-bottom: 20px;
 }
 
 #header {
   width: 100%;
 }
 
+body {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  background-color: burlywood;
+  row-gap: 10px;
+}
+
+h1, h2, h3, p {
+  padding: 20px;
+}
+
 #up {
   position: fixed;
   width: 40px;
   right: 10px;
-  bottom: 25px;
+  bottom: 10px;
   opacity: .3;
   z-index: 4;
 }
-
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: darkgoldenrod;
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: column;
-  place-items: center;
-  z-index: 4;
-}
-
-@media only screen and (min-width: 600px) {
-  section {
-    width: 100%;
-    -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  }
-}
-
-@media only screen and (min-width: 1000px) {
-  footer {
-    position: relative;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=aboutus.css.map */
