--- a/css/style.scss
+++ b/css/style.scss
@@ -1,160 +1,71 @@
 @import 'global';
-@import 'header';
 
-article {
-    padding: 40px 10px 10px 10px;
-}
-
-section {
-    position: relative;
-    display: grid;
-    place-items: center;
-
-    img {
-        border-radius: 8px;
-        border       : 1px solid #ddd;
-        padding      : 5px;
-        height       : 150px;
-    }
-}
-
-.blur {
-    filter  : blur(5px);
-    position: relative;
-    top     : 0px;
-    left    : 0px;
-    z-index : 1;
-}
-
-.bottom {
-    opacity: 1;
-    position: absolute;
-    top     : 0px;
-    left    : 0px;
-    z-index : 3;
-
-    :hover {
-        opacity   : 0;
-        transition: all 1s ease-in-out;
-    }
-}
-
-span {
-    display       : inline-block;
-    position      : relative;
-    text-align    : center;
-    color         : rgba(27, 24, 185, 0.13);
-}
-
-p {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size  : medium;
-    font-weight: lighter;
-}
-
-h1 {
-    color: blue;
-}
-
-h3 {
-    color: blueviolet;
-}
-
-#list {
-    padding        : 20px;
-    list-style-type: square;
-}
-
-header>a:visited {
-    color      : chartreuse;
-    font-weight: bold;
-}
-
-h3+h2 {
-    padding   : 20px;
-    font-style: italic;
-    color     : cyan;
-}
-
-a:link {
-    color: darkgreen;
-}
-
-a:active {
-    font-size: 30px;
-}
-
-.hidden {
-    position      : absolute;
-    height        : 130px;
-    text-align    : center;
-    vertical-align: middle;
-    top           : 50%;
-    left          : 50%;
-    transform     : translate(-50%, -50%);
-    overflow      : hidden;
-    z-index       : 2;
-    color         : rgb(0, 0, 0);
-    text-shadow   : 1px 1px 1px rgb(190, 190, 190);
-}
 
 body {
-    background-color: $bg_color;
-    display: grid;
-    place-items: center;
-    width: 100vw;
+    background-color: black;
 }
 
-#background {
-    position: fixed;
-    z-index : -99;
-    top     : 0px;
-    opacity : 0%;
-    width   : 100%;
-    height  : 100%;
-}
-
-.video {
-    border: 0px;
-    padding-bottom: 20px;
-}
-
-#commercial {
-    display: grid;
-    place-items: center;
-
-    p {
-        padding: 20px;
-    }
-}
-
-#header {
-    width: 100%;
-}
-
-@include scroll_up(10px, 25px);
-
-footer {
-    position        : fixed;
-    bottom          : 0;
-    left            : 0;
-    width           : 100%;
-    background-color: $ftbg_color;
+.body {
+    position        : relative;
     display         : grid;
-    grid-auto-flow  : column;
-    place-items     : center;
-    z-index         : 4;
-}
+    justify-items   : center;
+    align-items     : start;
+    min-height      : 100vh;
+    z-index         : 1;
+    background-color: rgba(0, 0, 0, 0.459);
 
-@media only screen and (min-width: 600px) {
-    section {
-        width: 100%;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    >div {
+        text-align : center;
+        color      : white;
+        display    : grid;
+        place-items: center;
+        row-gap    : 10px;
+        height: 100%;
+    }
+
+    .address {
+        text-decoration: none;
+        color          : white;
     }
 }
 
-@media only screen and (min-width: 1000px) {
-    footer {
-        position: relative;
+.logo {
+    position: relative;
+    width   : 160px;
+}
+
+.bg_images {
+
+    >img {
+        position  : absolute;
+        top       : 0px;
+        left      : 0px;
+        height    : 100%;
+        width     : 100%;
+        object-fit: cover;
+        z-index   : 0;
+    }
+
+    :nth-child(1) {
+        animation: photo_transition 20s infinite;
+    }
+
+    :nth-child(2) {
+        animation: photo_transition1 20s infinite;
+    }
+
+    :nth-child(3) {
+        animation: photo_transition2 20s infinite;
+    }
+
+    :nth-child(4) {
+
+        animation: photo_transition3 20s infinite;
     }
 }
+
+
+
+@media only screen and (min-width: 600px) {}
+
+@media only screen and (min-width: 1000px) {}
